<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.raj.returnintime.AddItemFragment">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_all_sides">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_text_input_layout"
                style="@style/text_input">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_title"
                    style="@style/text_field"
                    android:hint="@string/text_title"
                    android:inputType="text|textAutoCorrect" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/type_text_input_layout"
                style="@style/text_input">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_type"
                    style="@style/text_field"
                    android:hint="@string/hint_type"
                    android:inputType="text|textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/return_to_text_input_layout"
                style="@style/text_input">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_return_to"
                    style="@style/text_field"
                    android:hint="@string/hint_return_to"
                    android:inputType="text|textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/checkedout_text_input_layout"
                style="@style/text_input">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_checkedout"
                    style="@style/text_field"
                    android:focusable="false"
                    android:hint="@string/hint_start_date"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/return_text_input_layout"
                style="@style/text_input">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_return"
                    style="@style/text_field"
                    android:focusable="false"
                    android:hint="@string/hint_end_date"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/notify_text_input_layout"
                style="@style/text_input">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_notify"
                    style="@style/text_field"
                    android:focusable="false"
                    android:hint="@string/hint_notify_date"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/text"
                android:text="@string/mandatory_field" />

            <Button
                android:id="@+id/add_button"
                style="@style/raised_button"
                android:text="@string/add_button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
