<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.raj.returnintime.ItemListFragment">

    <ScrollView
        android:id="@+id/recyler_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding_all_sides"
            app:layoutManager="LinearLayoutManager" />
    </ScrollView>

    <TextView
        android:id="@+id/empty_text_image"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/pile_of_books"
        android:drawablePadding="@dimen/margin_text_image"
        android:text="@string/empty_list_text"
        android:drawableTop="@drawable/ic_event_black_24dp"/>

</RelativeLayout>
