<resources>
    <string name="app_name">In-time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_title">Title *</string>
    <string name="mandatory_field">* indicates required field</string>
    <string name="add_button">Add</string>
    <string name="text_leave_screen">Leave the screen ?</string>
    <string name="text_leave_message">Changes may not be saved.</string>
    <string name="text_stay_title">STAY</string>
    <string name="text_leave_title">LEAVE</string>
    <string name="toolbar_add_item_title">Add Event</string>
    <string name="text_delete_items_title">Delete Event(s)?</string>
...
    <string name="return_to">Target: </string>
    <string name="borrowed_on">Start Date: </string>
    <string name="return_by">End Date: </string>
    <string name="notify_me_on">Notify Me On: </string>
    <string name="save">Save</string>
    <string name="edit_item">Edit Event</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="requested_index_failed">Requested an index of -1</string>
    <string name="pile_of_books">Pile of Books</string>
    <string name="text_checkout">Checkout this!</string>
    <string name="text_flight">flight</string>
...
