<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.raj.returnintime.MainActivity"
    tools:showIn="@layout/activity_main">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment"
        android:name="com.android.raj.returnintime.ItemListFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</FrameLayout>
